--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -11,7 +11,7 @@ $text-color:#fff;
 }
 .el-aside {
   background-color: #ffffff;
-  color:$text-color;
+  color:#000;
   text-align: center;
   line-height: 200px;
 }
