changes for reponsive

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4136,15 +4136,14 @@ margin: 0 auto;
   /* position: relative;  */
 }
   .offer_option ul li:before {
-    /* position: absolute; */
+    position: absolute;
     content: "";
     width: 39px;
     height: 40px;
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center;
-    /* left: 0; */
-    /* top: 50%; */
+    left: 90px;
     transform: translateY(-50%); }
 
 .cr:before {
