--- a/assets/css/variable.scss
+++ b/assets/css/variable.scss
@@ -1,9 +1,9 @@
 @import "~vue-material/dist/theme/engine";
 
 @include md-register-theme("default", (
-  primary: md-get-palette-color(#ef7823, A200), // The primary color of your application
-  accent: md-get-palette-color(#3a3e55, A200), // The accent or secondary color
+  primary: #ef7823 // The primary color of your application
+  accent: #3a3e55 // The accent or secondary color
   theme: dark // This can be dark or light
 ));
 
-@import "~vue-material/dist/theme/all";
+@import "~vue-material/dist/base/theme/all";
