changes for header

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2585,7 +2585,7 @@ a.tnc_link {
 
 .top-button {
   cursor: pointer;
-  margin: 10px;
+  margin: 15px 10px;
 }
 .top-button-icon {
   color: #ef7823;
@@ -5076,6 +5076,7 @@ textarea[readonly~="false"] {
   width: 30px;
   float: left;
   margin-right: 5px;
+  margin-top: 8px;
 }
 
 .my-profile{
