changes for element

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4847,8 +4847,7 @@ textarea[readonly~="false"] {
 }
 
 .courses_card_col {
-	width: 790px;
-	padding: 77px 0 25px;
+	padding: 40px 0 0 25px;
 }
 .courses_card_col .section_title {
 	text-align: left;
